--- a/src/Components/ImageContainer/ImageContainer.module.css
+++ b/src/Components/ImageContainer/ImageContainer.module.css
@@ -4,3 +4,9 @@
   border: 1px solid black;
   border-radius: 2rem;
 }
+.default_image {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 2rem;
+}
