--- a/src/Components/ScrollingImageContainer/ScrollingImageContainer.module.css
+++ b/src/Components/ScrollingImageContainer/ScrollingImageContainer.module.css
@@ -9,3 +9,14 @@
 .slides {
   display: flex;
 }
+.dog_breed_image_container {
+  border-radius: 1rem;
+  width: 5rem;
+  cursor: pointer;
+  margin: 0.5rem;
+}
+.dog_image {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
