--- a/src/Components/ScrollingImageContainer/ScrollingImageContainer.module.css
+++ b/src/Components/ScrollingImageContainer/ScrollingImageContainer.module.css
@@ -15,8 +15,6 @@
   cursor: pointer;
   margin: 0.5rem;
 }
-.dog_image {
-  width: 100%;
-  height: 100%;
-  display: block;
+.active {
+  border: 0.2rem solid red;
 }
