--- a/src/Components/DropDown/DropDown.module.css
+++ b/src/Components/DropDown/DropDown.module.css
@@ -11,7 +11,7 @@
   width: 20rem;
   padding: 0.5rem 1rem;
   font-size: 1.6rem;
-  background-color: white;
+  background-color: var(--primary-white-color);
   border: 0.1rem solid var(--light-grey-color);
   border-radius: 0.4rem;
   cursor: pointer;
@@ -25,7 +25,7 @@
   overflow: overlay;
   border: 0.1rem solid var(--dark-grey-color);
   border-radius: 0.4rem;
-  background-color: white;
+  background-color: var(--primary-white-color);
   box-shadow: 0 0 0.4rem var(--light-blue-color);
   cursor: pointer;
 }
