--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,11 @@ img {
   height: 100%;
   display: block;
 }
+
+.select {
+  border-radius: 4;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
