FEAT:Movement of the scrollbar together with the slider

--- a/src/components/Gallery/Gallery.module.css
+++ b/src/components/Gallery/Gallery.module.css
@@ -1,3 +1,11 @@
 .gallery_container {
   padding: 2rem 0.5rem;
 }
+.drop_down {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-bottom: 2rem;
+}
